Fixed height of hero on mobile

--- a/_scss/_index.scss
+++ b/_scss/_index.scss
@@ -85,7 +85,7 @@ $desktop-trigger: 800px;
     }
 
     #hero {
-        height: 23em;
+        height: 27em;
         padding: none;
         font-size: 1.3em;
         background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4) ), url(../assets/imgs/hero.jpg);
@@ -300,7 +300,6 @@ $desktop-trigger: 800px;
         "stats contact";
 
         #hero {
-            height: 27em;
             font-size: 1.7em;
             grid-area: hero;
         }
